--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,8 +8,7 @@ on:
 
 jobs:
   compile:
-    runs-on: Agent-1
-
+    runs-on: Ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
