--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,14 +22,12 @@ jobs:
         run: |
           cd client
           find . -name "*.js" -exec node --check {} +
-
       - name: Backend Compilation (Syntax Check)
         run: |
           cd api
           find . -name "*.js" -exec node --check {} +
-
   gitleaks-scan:
-    runs-on: Agent-1
+    runs-on: Ubuntu-latest
     needs: compile
     steps:
       - name: Checkout code
@@ -42,9 +40,8 @@ jobs:
         run: |
           gitleaks detect --source ./client --exit-code 1
           gitleaks detect --source ./api --exit-code 1
-
   trivy_fs_scan:
-    runs-on: Agent-1
+    runs-on: Ubuntu-latest
     needs: gitleaks-scan
     steps:
       - name: Checkout code
@@ -60,7 +57,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
 
   sonar-frontend:
-    runs-on: Agent-1
+    runs-on: Ubuntu-latest
     needs: trivy_fs_scan
     steps:
       - name: Checkout code
@@ -80,7 +77,7 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   sonar-backend:
-    runs-on: Agent-1
+    runs-on: Ubuntu-latest
     needs: sonar-frontend
     steps:
       - name: Checkout code
@@ -109,8 +106,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: srinu54
+          password: dckr_pat_wCIK8sP0o4vgDufK8vyOK7dUhKU
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -120,7 +117,7 @@ jobs:
         with:
           context: ./api  
           push: true
-          tags: adijaiswal/backend:latest
+          tags: srinu54/codebuild-python:latest
           file: ./api/Dockerfile
 
   build_frontend_docker_image_and_push:
@@ -133,8 +130,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: srinu54
+          password: dckr_pat_wCIK8sP0o4vgDufK8vyOK7dUhKU
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -144,11 +141,11 @@ jobs:
         with:
           context: ./client
           push: true
-          tags: adijaiswal/frontend:latest
+          tags: srinu54/nginx-demo:latest
           file: ./client/Dockerfile
 
   trivy_image_scan:
-    runs-on: Agent-1
+    runs-on: Ubuntu-latest
     needs: build_frontend_docker_image_and_push   # or whatever job built/pushed your image
     steps:
       - name: Checkout code
@@ -158,7 +155,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: image               # 👈 scan container image
-          image-ref: adijaiswal/backend:latest
+          image-ref: srinu54/codebuild-python:latest
           format: table
           exit-code: '0'                 
           ignore-unfixed: true
@@ -169,7 +166,7 @@ jobs:
         uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: image               # 👈 scan container image
-          image-ref: adijaiswal/frontend:latest
+          image-ref: srinu54/nginx-demo:latest
           format: table
           exit-code: '0'              
           ignore-unfixed: true
@@ -177,7 +174,7 @@ jobs:
           severity: CRITICAL,HIGH
 
   deploy_to_kubernetes:
-    runs-on: Agent-1
+    runs-on: Ubuntu-latest
     needs: trivy_image_scan
     steps:
     - name: Checkout Code
